# senate-hearings

./: README.md  congress_scrape.py  get_html.ipynb  get_text.ipynb  hearings.ipynb  main.py  pyproject.toml
senate_html/: budget.html  caucus on international narcotics control.html  impeachment trial committee.html  indian affairs.html  rules and administration.html  select committee on ethics.html  select committee on intelligence.html  small business and entrepreneurship.html  special committee on aging.html  special committee on the y2k technology problem.html
