[project]
name = "senate-hearings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "requests>=2.32.5",
    "selenium>=4.38.0",
]
